# mrx

./: .envrc  .envrc.lib.sh  .envrc.source.sh  .gitignore  Cargo.toml  TODO.md  flake.nix  infallible.nix  mrx.generated.nix  mrx.toml  rustfmt.toml
.github/workflows/: ci.yaml
.sqlx/: query-0a3f9f2058d88f4f5f8f3687dae899c9daef04d9076bca4c0a6283a0a8cf1093.json  query-0c4db142198f9b1216e8ee9b22327136620ad72be0bae3f4253fe9ebad425b46.json  query-1635b4c02d9933b79f859dc62acbdf98155171606dca5fa308f8a61fffc6319c.json  query-263dcfeb12fee5b1d61cf396c37b2e7091bb90b7b03875dcaba522e2ef3fcdcc.json  query-36320a0467f0c3d564908b53e039ec55cdddf701bc3e08965ac801be1ef4e179.json  query-8953f1efe7253b18ef4661562284a89395c400c2eb3f13917a1a20e773031d2a.json
crates/macros/cli/: Cargo.toml
crates/macros/cli/src/: lib.rs
crates/mrx-bin/: Cargo.toml
crates/mrx-bin/src/: cli.rs  main.rs
crates/mrx-build/: Cargo.toml
crates/mrx-build/src/: build.rs  cached.sh  cli.rs  lib.rs  main.rs  run.rs
crates/mrx-cache/: Cargo.toml
crates/mrx-cache/src/: cache.rs  cli.rs  db.rs  lib.rs  main.rs  run.rs  time.rs  unix_seconds.rs
crates/mrx-generate/: Cargo.toml
crates/mrx-generate/src/: cli.rs  generate.rs  lib.rs  main.rs  run.rs
crates/mrx-hook/: Cargo.toml
crates/mrx-hook/src/: cli.rs  hook.rs  lib.rs  main.rs  run.rs
crates/mrx-refresh/: Cargo.toml
crates/mrx-refresh/src/: cli.rs  lib.rs  main.rs
crates/mrx-show/: Cargo.toml
crates/mrx-show/src/: cli.rs  lib.rs  main.rs  run.rs  show.rs  watch_files.rs
crates/mrx-show/src/graph/: file_edge_pairs.rs  mod.rs
crates/mrx-utils/: Cargo.toml
crates/mrx-utils/src/: ast.rs  attr.rs  build_and_symlink.rs  config.rs  find_bin_attrnames.rs  find_nix_path_attrset.rs  lib.rs  nix_build_command.rs  nix_references_command.rs  nix_store_path.rs
crates/mrx-utils/src/fs/: absolute_file_path_buf.rs  absolute_path_buf.rs  mod.rs  write_with_fallback.rs
crates/mrx-utils/src/graph/: error.rs  mod.rs
lib/: mk-decorated-inputs.nix  mk-project-with.nix  mk-project.nix
lib/decorate/: default.nix
lib/decorate/mk-name-decorated/: default.nix
lib/decorate/mrx/: default.nix
lib/decorate/mrx/run/: default.nix
lib/decorate/mrx/run/many/: API.md  default.nix
lib/decorate/run/: default.nix
lib/decorate/run/many/: default.nix
lib/decorate/run/parallel/: default.nix
lib/inputs/mrx/: default.nix
lib/inputs/mrx/run/many/: API.md  default.nix  run.sh
lib/internal/: map-systems.nix  mk-project-with.nix
lib/outputs/: default.nix
lib/outputs/mrx/: default.nix
lib/run/many/: API.md  default.nix  run.sh
lib/utils/: default.nix  fn.nix  fp.nix  lists.nix  mrx.nix
lib/utils/attrs/: default.nix  walk.nix
pkg/mrx/: main.nix  run.sh
pkg/mrx-upstream/: main.nix  run.sh
pkg/mrx-upstream/_/name/: default.nix
pkg/mrx/_/name/: default.nix
pkg/rust/: main.nix
pkg/sqlx/: main.nix  run.sh
pkg/sqlx/_/name/: default.nix
scripts/lib/build-and-symlink-derivations/: main.nix  run.sh
scripts/lib/build-and-symlink-derivations/_/name/: default.nix
scripts/lib/find-bins/: main.nix  run.sh
scripts/lib/find-dependency-graph-edges/: main.nix  run.sh
scripts/lib/find-dependency-graph-edges/_/name/: default.nix
scripts/lib/find-generated-nix-raw-attrset/: main.nix  run.sh
scripts/lib/find-generated-nix-raw-attrset/_/name/: default.nix
scripts/lib/find-stale-dependency-graph-nodes/: main.nix  run.sh
scripts/lib/find-stale-dependency-graph-nodes/_/name/: default.nix
scripts/lib/generate-ignore-patterns-file/: main.nix  run.sh
scripts/lib/generate-ignore-patterns-file/_/name/: default.nix
scripts/lib/get-config-value/: main.nix  run.sh
scripts/lib/get-config-value/_/name/: default.nix
scripts/lib/handle-stale-dependency-graph-nodes/: main.nix  run.sh
scripts/lib/handle-stale-dependency-graph-nodes/_/name/: default.nix
scripts/lib/migrations/apply/: run.sh
scripts/lib/migrations/apply/_/name/: default.nix
scripts/lib/mtime-database/: main.nix  run.sh
scripts/lib/mtime-database/_/name/: default.nix
scripts/util/with-tee/: main.nix  run.sh
scripts/util/with-tee/_/name/: default.nix
shell/: main.nix
shell/_/name/: default.nix
sql/migrations/: 00-init.sql  01-create-node-and-alias-tables.sql  01-create-store-table.sql  02-create-store-table.sql
xtask/: Cargo.toml
xtask/src/: main.rs
