[workspace]
resolver = "3"
members = [
  "crates/macros/cli",
  "crates/mrx-bin",
  "crates/mrx-build",
  "crates/mrx-cache",
  "crates/mrx-generate",
  "crates/mrx-hook",
  "crates/mrx-refresh",
  "crates/mrx-show",
]

[workspace.lints.rust]
warnings = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_crate_dependencies = "deny"
unused_extern_crates = "deny"
unused_qualifications = "deny"
single-use-lifetimes = "deny"
redundant-lifetimes = "deny"
rust-2018-compatibility = "deny"
rust-2021-compatibility = "deny"
rust-2024-compatibility = "deny"
future-incompatible = "deny"

[workspace.lints.clippy]
# cargo = "warn"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
