[workspace]
resolver = "3"
members = [
  "crates/macros/cli",
  "crates/mrx-bin",
  "crates/mrx-build",
  "crates/mrx-cache",
  "crates/mrx-generate",
  "crates/mrx-hook",
  "crates/mrx-show",
  "xtask",
]

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_qualifications = "warn"
single-use-lifetimes = "warn"
redundant-lifetimes = "warn"
rust-2018-compatibility = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"
future-incompatible = "warn"

[workspace.lints.clippy]
# TODO: Move to `warn`
cargo = "allow"
complexity = "warn"
correctness = "deny"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"

[profile.dev.package.sqlx-macros]
opt-level = 3
