[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
console = "0.16.2"
sqlx-cli = { version = "0.8.6", features = ["sqlite"] }
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
