[package]
name = "mrx-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
mrx-utils = { path = "../mrx-utils" }
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
